This reverts commit a7b50f723d6c6249faa688a1a4423cc4006d37dd.